examples/c/real_world/c11.c
/* Generated by re2c */
// re2c $INPUT -o $OUTPUT -i
//
// C11 language lexer.
// Reference: https://quut.com/c/ANSI-C-grammar-l-2011.html

#include <assert.h>
#include <stdio.h>

constexpr bool DEBUG = false;

#define PRINT_TOKEN(token) do { \
  if (DEBUG) printf("token = [%s]\n", token); \
} while(0)

#define PRINT_TOKEN2(start, size) do { \
  if (DEBUG) printf("token = [%.*s]\n", (int)(size), token); \
} while(0)

bool lex(const char *source) {
  const char *YYCURSOR = source;
  const char *YYMARKER = source;

  while(true){
    const char* token = YYCURSOR;
  
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case ' ': goto yy4;
		case '!': goto yy6;
		case '"': goto yy8;
		case '#': goto yy9;
		case '%': goto yy10;
		case '&': goto yy12;
		case '\'': goto yy14;
		case '(': goto yy15;
		case ')': goto yy16;
		case '*': goto yy17;
		case '+': goto yy19;
		case ',': goto yy21;
		case '-': goto yy22;
		case '.': goto yy24;
		case '/': goto yy26;
		case '0': goto yy28;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy30;
		case ':': goto yy32;
		case ';': goto yy34;
		case '<': goto yy35;
		case '=': goto yy37;
		case '>': goto yy39;
		case '?': goto yy41;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'x':
		case 'y':
		case 'z': goto yy42;
		case 'L':
		case 'U': goto yy45;
		case '[': goto yy46;
		case '\\': goto yy47;
		case ']': goto yy48;
		case '^': goto yy49;
		case '_': goto yy51;
		case 'a': goto yy52;
		case 'b': goto yy53;
		case 'c': goto yy54;
		case 'd': goto yy55;
		case 'e': goto yy56;
		case 'f': goto yy57;
		case 'g': goto yy58;
		case 'i': goto yy59;
		case 'l': goto yy60;
		case 'r': goto yy61;
		case 's': goto yy62;
		case 't': goto yy63;
		case 'u': goto yy64;
		case 'v': goto yy65;
		case 'w': goto yy66;
		case '{': goto yy67;
		case '|': goto yy68;
		case '}': goto yy70;
		case '~': goto yy71;
		default: goto yy2;
	}
yy1:
	++YYCURSOR;
	{ return true; }
yy2:
	++YYCURSOR;
yy3:
	{ printf("[Error] unknown char = [%d]\n", yych); return false; }
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
	{ continue; }
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy72;
		default: goto yy7;
	}
yy7:
	{ PRINT_TOKEN("!"); continue; }
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00:
		case '\n': goto yy3;
		default: goto yy74;
	}
yy9:
	++YYCURSOR;
	{ PRINT_TOKEN("#"); continue; }
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy79;
		case '>': goto yy70;
		default: goto yy11;
	}
yy11:
	{ PRINT_TOKEN("%"); continue; }
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
		case '&': goto yy80;
		case '=': goto yy81;
		default: goto yy13;
	}
yy13:
	{ PRINT_TOKEN("&"); continue; }
yy14:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00:
		case '\n':
		case '\'': goto yy3;
		default: goto yy83;
	}
yy15:
	++YYCURSOR;
	{ PRINT_TOKEN("("); continue; }
yy16:
	++YYCURSOR;
	{ PRINT_TOKEN(")"); continue; }
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy85;
		default: goto yy18;
	}
yy18:
	{ PRINT_TOKEN("*"); continue; }
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case '+': goto yy86;
		case '=': goto yy87;
		default: goto yy20;
	}
yy20:
	{ PRINT_TOKEN("+"); continue; }
yy21:
	++YYCURSOR;
	{ PRINT_TOKEN(","); continue; }
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy88;
		case '=': goto yy89;
		case '>': goto yy90;
		default: goto yy23;
	}
yy23:
	{ PRINT_TOKEN("-"); continue; }
yy24:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '.': goto yy91;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy92;
		default: goto yy25;
	}
yy25:
	{ PRINT_TOKEN("."); continue; }
yy26:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '*': goto yy94;
		case '/': goto yy95;
		case '=': goto yy96;
		default: goto yy27;
	}
yy27:
	{ PRINT_TOKEN("/"); continue; }
yy28:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'X':
		case 'x': goto yy105;
		default: goto yy100;
	}
yy29:
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy30:
	yyaccept = 4;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '.': goto yy97;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy30;
		case 'E':
		case 'e': goto yy102;
		case 'L': goto yy107;
		case 'U':
		case 'u': goto yy108;
		case 'l': goto yy109;
		default: goto yy31;
	}
yy31:
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case '>': goto yy48;
		default: goto yy33;
	}
yy33:
	{ PRINT_TOKEN(":"); continue; }
yy34:
	++YYCURSOR;
	{ PRINT_TOKEN(";"); continue; }
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case '%': goto yy67;
		case ':': goto yy46;
		case '<': goto yy110;
		case '=': goto yy112;
		default: goto yy36;
	}
yy36:
	{ PRINT_TOKEN("<"); continue; }
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy113;
		default: goto yy38;
	}
yy38:
	{ PRINT_TOKEN("="); continue; }
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy114;
		case '>': goto yy115;
		default: goto yy40;
	}
yy40:
	{ PRINT_TOKEN(">"); continue; }
yy41:
	++YYCURSOR;
	{ PRINT_TOKEN("?"); continue; }
yy42:
	yych = *++YYCURSOR;
yy43:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy42;
		default: goto yy44;
	}
yy44:
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy45:
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '"': goto yy73;
		case '\'': goto yy117;
		default: goto yy43;
	}
yy46:
	++YYCURSOR;
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy47:
	++YYCURSOR;
	{ PRINT_TOKEN("\\"); continue; }
yy48:
	++YYCURSOR;
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy118;
		default: goto yy50;
	}
yy50:
	{ PRINT_TOKEN("^"); continue; }
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A': goto yy119;
		case 'B': goto yy120;
		case 'C': goto yy121;
		case 'G': goto yy122;
		case 'I': goto yy123;
		case 'N': goto yy124;
		case 'S': goto yy125;
		case 'T': goto yy126;
		case '_': goto yy127;
		default: goto yy43;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy128;
		default: goto yy43;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy129;
		default: goto yy43;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy130;
		case 'h': goto yy131;
		case 'o': goto yy132;
		default: goto yy43;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy133;
		case 'o': goto yy134;
		default: goto yy43;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy136;
		case 'n': goto yy137;
		case 'x': goto yy138;
		default: goto yy43;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy139;
		case 'o': goto yy140;
		default: goto yy43;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy141;
		default: goto yy43;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy142;
		case 'n': goto yy144;
		default: goto yy43;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy145;
		default: goto yy43;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy146;
		default: goto yy43;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'h': goto yy147;
		case 'i': goto yy148;
		case 't': goto yy149;
		case 'w': goto yy150;
		default: goto yy43;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'y': goto yy151;
		default: goto yy43;
	}
yy64:
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '"': goto yy73;
		case '\'': goto yy117;
		case '8': goto yy152;
		case 'n': goto yy153;
		default: goto yy43;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy154;
		default: goto yy43;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'h': goto yy155;
		default: goto yy43;
	}
yy67:
	++YYCURSOR;
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy156;
		case '|': goto yy157;
		default: goto yy69;
	}
yy69:
	{ PRINT_TOKEN("|"); continue; }
yy70:
	++YYCURSOR;
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy71:
	++YYCURSOR;
	{ PRINT_TOKEN("~"); continue; }
yy72:
	++YYCURSOR;
	{ PRINT_TOKEN("!="); continue; }
yy73:
	yych = *++YYCURSOR;
yy74:
	switch (yych) {
		case 0x00:
		case '\n': goto yy75;
		case '"': goto yy76;
		case '\\': goto yy78;
		default: goto yy73;
	}
yy75:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
		case 0: goto yy3;
		case 1: goto yy25;
		case 2: goto yy27;
		case 3: goto yy29;
		case 4: goto yy31;
		case 5: goto yy44;
		case 6: goto yy77;
		case 7: goto yy93;
		case 8: goto yy98;
		default: goto yy177;
	}
yy76:
	yyaccept = 6;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case ' ': goto yy76;
		case '"': goto yy73;
		case 'L':
		case 'U': goto yy158;
		case 'u': goto yy159;
		default: goto yy77;
	}
yy77:
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
		case '"':
		case '\'':
		case '\\':
		case 'a':
		case 'b':
		case 'f':
		case 'n':
		case 'r':
		case 't':
		case 'v': goto yy73;
		default: goto yy75;
	}
yy79:
	++YYCURSOR;
	{ PRINT_TOKEN("%="); continue; }
yy80:
	++YYCURSOR;
	{ PRINT_TOKEN("&&"); continue; }
yy81:
	++YYCURSOR;
	{ PRINT_TOKEN("&="); continue; }
yy82:
	yych = *++YYCURSOR;
yy83:
	switch (yych) {
		case 0x00:
		case '\n': goto yy75;
		case '\'': goto yy160;
		case '\\': goto yy84;
		default: goto yy82;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
		case '"':
		case '\'':
		case '\\':
		case 'a':
		case 'b':
		case 'f':
		case 'n':
		case 'r':
		case 't':
		case 'v': goto yy82;
		default: goto yy75;
	}
yy85:
	++YYCURSOR;
	{ PRINT_TOKEN("*="); continue; }
yy86:
	++YYCURSOR;
	{ PRINT_TOKEN("++"); continue; }
yy87:
	++YYCURSOR;
	{ PRINT_TOKEN("+="); continue; }
yy88:
	++YYCURSOR;
	{ PRINT_TOKEN("--"); continue; }
yy89:
	++YYCURSOR;
	{ PRINT_TOKEN("-="); continue; }
yy90:
	++YYCURSOR;
	{ PRINT_TOKEN("->"); continue; }
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
		case '.': goto yy161;
		default: goto yy75;
	}
yy92:
	yyaccept = 7;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy92;
		case 'E':
		case 'e': goto yy162;
		case 'F':
		case 'L':
		case 'f':
		case 'l': goto yy163;
		default: goto yy93;
	}
yy93:
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy75;
		case '*': goto yy164;
		default: goto yy94;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy75;
		case '\n': goto yy165;
		default: goto yy95;
	}
yy96:
	++YYCURSOR;
	{ PRINT_TOKEN("/="); continue; }
yy97:
	yyaccept = 8;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy92;
		case 'E':
		case 'e': goto yy166;
		case 'F':
		case 'L':
		case 'f':
		case 'l': goto yy167;
		default: goto yy98;
	}
yy98:
	{ PRINT_TOKEN2(token, YYCURSOR - token); continue; }
yy99:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
yy100:
	switch (yych) {
		case '.': goto yy97;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7': goto yy99;
		case '8':
		case '9': goto yy101;
		case 'E':
		case 'e': goto yy102;
		case 'L': goto yy103;
		case 'U':
		case 'u': goto yy104;
		case 'l': goto yy106;
		default: goto yy29;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
		case '.': goto yy97;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy101;
		case 'E':
		case 'e': goto yy102;
		default: goto yy75;
	}
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
		case '+':
		case '-': goto yy168;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy169;
		default: goto yy75;
	}
yy103:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L': goto yy171;
		case 'U':
		case 'u': goto yy172;
		default: goto yy29;
	}
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L': goto yy173;
		case 'l': goto yy174;
		default: goto yy29;
	}
yy105:
	yych = *++YYCURSOR;
	switch (yych) {
		case '.': goto yy175;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy176;
		default: goto yy75;
	}
yy106:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'U':
		case 'u': goto yy172;
		case 'l': goto yy171;
		default: goto yy29;
	}
yy107:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L': goto yy178;
		case 'U':
		case 'u': goto yy179;
		default: goto yy31;
	}
yy108:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L': goto yy180;
		case 'l': goto yy181;
		default: goto yy31;
	}
yy109:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'U':
		case 'u': goto yy179;
		case 'l': goto yy178;
		default: goto yy31;
	}
yy110:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy182;
		default: goto yy111;
	}
yy111:
	{ PRINT_TOKEN("<<"); continue; }
yy112:
	++YYCURSOR;
	{ PRINT_TOKEN("<="); continue; }
yy113:
	++YYCURSOR;
	{ PRINT_TOKEN("=="); continue; }
yy114:
	++YYCURSOR;
	{ PRINT_TOKEN(">="); continue; }
yy115:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy183;
		default: goto yy116;
	}
yy116:
	{ PRINT_TOKEN(">>"); continue; }
yy117:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\'': goto yy75;
		default: goto yy83;
	}
yy118:
	++YYCURSOR;
	{ PRINT_TOKEN("^="); continue; }
yy119:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy184;
		case 't': goto yy185;
		default: goto yy43;
	}
yy120:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy186;
		default: goto yy43;
	}
yy121:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy187;
		default: goto yy43;
	}
yy122:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy188;
		default: goto yy43;
	}
yy123:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy189;
		default: goto yy43;
	}
yy124:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy190;
		default: goto yy43;
	}
yy125:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy191;
		default: goto yy43;
	}
yy126:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'h': goto yy192;
		default: goto yy43;
	}
yy127:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy193;
		default: goto yy43;
	}
yy128:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy194;
		default: goto yy43;
	}
yy129:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy195;
		default: goto yy43;
	}
yy130:
	yych = *++YYCURSOR;
	switch (yych) {
		case 's': goto yy196;
		default: goto yy43;
	}
yy131:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy197;
		default: goto yy43;
	}
yy132:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy198;
		default: goto yy43;
	}
yy133:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy199;
		default: goto yy43;
	}
yy134:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy42;
		case 'u': goto yy200;
		default: goto yy135;
	}
yy135:
	{ PRINT_TOKEN("do"); continue; }
yy136:
	yych = *++YYCURSOR;
	switch (yych) {
		case 's': goto yy201;
		default: goto yy43;
	}
yy137:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy202;
		default: goto yy43;
	}
yy138:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy203;
		default: goto yy43;
	}
yy139:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy204;
		default: goto yy43;
	}
yy140:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy205;
		default: goto yy43;
	}
yy141:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy207;
		default: goto yy43;
	}
yy142:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
